--- a/css/style.css
+++ b/css/style.css
@@ -304,23 +304,7 @@ footer p{
 /* ----------------------
     Media Queries
 -------------------------- */
-@media screen and (max-width: 354px){
-   .buttons{
-        display:inline-block;
-        margin-top:15px;
-   }
-   #brand_logos .logos{
-        grid-template-columns: repeat(2,1fr);
-        grid-gap: 20px;
-    }
-}
-@media screen and (min-width: 355px) and (max-width: 655px){
-     #brand_logos .logos{
-        grid-template-columns: repeat(3,1fr);
-        grid-gap: 20px;
-    }
-}
-@media screen and (max-width: 655px){
+@media only screen and (max-width:688px) {
     .desktop_navbar{
         display:none;
     }
@@ -351,21 +335,32 @@ footer p{
     .image_content{
         order:1;
     }
+    #brand_logos .logos{
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 20px;
+    }
     .product_grids{
-        grid-template-columns: repeat(1,1fr);
-        grid-gap: 30px;
+    grid-template-columns: repeat(1,1fr);
+    grid-gap: 30px;
     }
-    #promo_camera .container{
-        grid-template-columns: repeat(1,1fr);
-        grid-gap:20px;
-    
-    }
-    .p_name{
-        font-size:3em;
-        margin-top:20px;
-    }
-   
+    .newsletter{
+            padding: 0 20px;
+        }
+        .newsletter .form{
+            flex-direction: column;
+            align-items: center;
+        }
+        .newsletter .form input{
+            width: 80%;
+            margin-right: 0;
+            margin-bottom: 10px;
+        }
+        .newsletter .form input[type="button"]{
+            display: block;
+        }
+        
 }
+/* tablet responsive */
 @media screen and (min-width: 656px) and (max-width: 870px){
     .desktop_navbar{
         display:none;
